# porthound

./: .gitignore  AGENTS.md  BRANCHING.md  CONTRIBUTING.md  DEPLOYMENT.md  FAST.md  GITHUB_REPO_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RESUMEN.md  SECURITY.md  SUPPORT.md  agent.py  app.py  country_centroids.py  dns.py  framework.py  geoip_seed.py  info.py  main.py  manage.py  master.py  mkdocs.yml  package.json  pyproject.toml  requirements-docs.txt  runtime_paths.py  server.py  settings.py  tcp.py  utils.py  views.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs-pages.yml  package.yml  pages.yml  pypi.yml  testpypi.yml
docs/: 404.html  CNAME  README.md  architecture.md  docs-setup.md  getting-started.md  index.html  index.md  repository_visibility.md
docs/reference/: api.md  catalogs.md  configuration.md  persistence.md  security.md  ui.md  websocket.md
frontend/: eslint.config.cjs  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/scripts/: vue-cli-safe.js
frontend/src/: App.vue  main.js
frontend/src/components/: MapPanel.vue
frontend/src/components/layout/: AppHero.vue  AppTopBar.vue
frontend/src/router/: index.js
frontend/src/state/: appStore.js
frontend/src/views/: ChartsView.vue  DashboardView.vue  ExplorerView.vue  TargetsView.vue
packaging/deb/: README.md  build.sh
packaging/zip/: README.md  build.sh
renderer/: crud.html  index.html
scripts/: repo_visibility_check.sh  set_github_about.sh
tests/: test_core_hardening.py
